Fix unsafe target="_blank" attribute

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend
         Mentor</a>.
-      Coded by <a href="https://github.com/Elethus">Elethus</a>.
+      Coded by <a href="https://github.com/Elethus" target="_blank" rel="noopener noreferrer">Elethus</a>.
     </div>
   </footer>
 
